syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/functions/grpc";

import "pkg/functions/grpc/functions-common.proto";

message WatchPodsResponse {
	optional string event = 1;
	optional PodsInfo pod = 2;
}

message WatchPodsRequest {
	map<string, string> annotations = 1;
}
