syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message GetWorkflowByNameRequest {
	optional string namespace = 1;
	optional string name = 2;
}

message GetWorkflowByNameResponse {
	optional string uid = 1;
	optional string name = 2;
	optional int32 revision = 3;
	optional bool active = 4;
	optional google.protobuf.Timestamp createdAt = 5;
	optional string description = 6;
	optional bytes workflow = 7;
	optional string logToEvents = 8;
}
