syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message BaseInfo {
	optional string name = 1;
	optional string namespace = 2;
	optional string workflow = 3;
	optional string image = 4;
	optional string cmd = 5;

	optional int32 size = 6;
	optional int32 minScale = 7;
}

message CreateIsolateRequest {
	optional BaseInfo info = 1;
}


message GetIsolateRequest {
	optional string name = 1;
}

message GetIsolateResponse {
	optional BaseInfo info = 1;
}

message ListIsolatesRequest {
	map<string, string> annotations = 1;
}

message IsolateInfo {
	optional BaseInfo info = 1;
	optional string Status = 2;
	optional string StatusMessage = 3;
	optional string ServiceName = 4;
}

message ListIsolatesResponse {
	repeated IsolateInfo isolates = 1;
}
